y.output
Terminaux inutilisés dans la grammaire

    tFL
    tCONDEGAL
    tDIFF
    tSUPEG
    tINFEG
    tAND
    tOR
    tERROR
    tCONST


État 14 conflits: 5 décalage/réduction, 7 réduction/réduction
État 23 conflits: 5 décalage/réduction, 7 réduction/réduction
État 25 conflits: 1 décalage/réduction
État 27 conflits: 4 décalage/réduction


Grammaire

    0 $accept: Clio4 $end

    1 Clio4: tMAIN tPO Parametres tPF Body
    2      | tMAIN tPO tPF Body

    3 $@1: %empty

    4 Body: tOB $@1 DeclaInstrs tCB

    5 DeclaInstrs: DeclaInstr DeclaInstrs
    6            | %empty

    7 DeclaInstr: Declarations
    8           | Instructions

    9 Parametres: Parametre
   10           | Parametre tVIRG Parametres

   11 Parametre: tINT tID

   12 Declarations: Declaration Declarations
   13             | %empty

   14 Declaration: tINT IDs tEOI
   15            | tINT tID tEGAL tNB tEOI

   16 IDs: tID
   17    | tID tVIRG tID

   18 Instructions: Instruction Instructions
   19             | %empty

   20 Instruction: Affectation

   21 $@2: %empty

   22 $@3: %empty

   23 $@4: %empty

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB $@3 Else tOB $@4 tCB

   25 $@5: %empty

   26 $@6: %empty

   27 Instruction: tWHILE $@5 tPO Condition tPF tOB $@6 Body tCB
   28            | tPRINT tPO Element tPF tEOI

   29 Else: tELSE Body
   30     | %empty

   31 Element: tNB
   32        | tID

   33 Condition: Element tEGAL tEGAL Element
   34          | Element tINF Element
   35          | Element tSUP Element
   36          | Element

   37 Affectation: tID tEGAL Operation tEOI

   38 Operation: Operation tADD MultDivi
   39          | Operation tSOU MultDivi
   40          | MultDivi

   41 MultDivi: MultDivi tMUL Terme
   42         | MultDivi tDIV Terme
   43         | Terme

   44 Terme: tID
   45      | tNB


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tFL (258)
    tEGAL (259) 15 33 37
    tPO (260) 1 2 24 27 28
    tIF (261) 24
    tPF (262) 1 2 24 27 28
    tELSE (263) 29
    tCONDEGAL (264)
    tDIFF (265)
    tSUP (266) 35
    tINF (267) 34
    tSUPEG (268)
    tINFEG (269)
    tAND (270)
    tOR (271)
    tWHILE (272) 27
    tSOU (273) 39
    tADD (274) 38
    tDIV (275) 42
    tMUL (276) 41
    tERROR (277)
    tMAIN (278) 1 2
    tCONST (279)
    tINT (280) 11 14 15
    tPRINT (281) 28
    tOB (282) 4 24 27
    tCB (283) 4 24 27
    tEOI (284) 14 15 28 37
    tVIRG (285) 10 17
    tNB <nb> (286) 15 31 45
    tID <var> (287) 11 15 16 17 32 37 44


Non-terminaux, suivis des règles où ils apparaissent

    $accept (33)
        à gauche: 0
    Clio4 (34)
        à gauche: 1 2
        à droite: 0
    Body (35)
        à gauche: 4
        à droite: 1 2 24 27 29
    $@1 (36)
        à gauche: 3
        à droite: 4
    DeclaInstrs (37)
        à gauche: 5 6
        à droite: 4 5
    DeclaInstr (38)
        à gauche: 7 8
        à droite: 5
    Parametres (39)
        à gauche: 9 10
        à droite: 1 10
    Parametre (40)
        à gauche: 11
        à droite: 9 10
    Declarations (41)
        à gauche: 12 13
        à droite: 7 12
    Declaration (42)
        à gauche: 14 15
        à droite: 12
    IDs (43)
        à gauche: 16 17
        à droite: 14
    Instructions (44)
        à gauche: 18 19
        à droite: 8 18
    Instruction (45)
        à gauche: 20 24 27 28
        à droite: 18
    $@2 (46)
        à gauche: 21
        à droite: 24
    $@3 (47)
        à gauche: 22
        à droite: 24
    $@4 (48)
        à gauche: 23
        à droite: 24
    $@5 (49)
        à gauche: 25
        à droite: 27
    $@6 (50)
        à gauche: 26
        à droite: 27
    Else (51)
        à gauche: 29 30
        à droite: 24
    Element <nb> (52)
        à gauche: 31 32
        à droite: 28 33 34 35 36
    Condition <nb> (53)
        à gauche: 33 34 35 36
        à droite: 24 27
    Affectation (54)
        à gauche: 37
        à droite: 20
    Operation (55)
        à gauche: 38 39 40
        à droite: 37 38 39
    MultDivi (56)
        à gauche: 41 42 43
        à droite: 38 39 40 41 42
    Terme (57)
        à gauche: 44 45
        à droite: 41 42 43


État 0

    0 $accept: . Clio4 $end

    tMAIN  décalage et aller à l'état 1

    Clio4  aller à l'état 2


État 1

    1 Clio4: tMAIN . tPO Parametres tPF Body
    2      | tMAIN . tPO tPF Body

    tPO  décalage et aller à l'état 3


État 2

    0 $accept: Clio4 . $end

    $end  décalage et aller à l'état 4


État 3

    1 Clio4: tMAIN tPO . Parametres tPF Body
    2      | tMAIN tPO . tPF Body

    tPF   décalage et aller à l'état 5
    tINT  décalage et aller à l'état 6

    Parametres  aller à l'état 7
    Parametre   aller à l'état 8


État 4

    0 $accept: Clio4 $end .

    $défaut  accepter


État 5

    2 Clio4: tMAIN tPO tPF . Body

    tOB  décalage et aller à l'état 9

    Body  aller à l'état 10


État 6

   11 Parametre: tINT . tID

    tID  décalage et aller à l'état 11


État 7

    1 Clio4: tMAIN tPO Parametres . tPF Body

    tPF  décalage et aller à l'état 12


État 8

    9 Parametres: Parametre .
   10           | Parametre . tVIRG Parametres

    tVIRG  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 9 (Parametres)


État 9

    4 Body: tOB . $@1 DeclaInstrs tCB

    $défaut  réduction par utilisation de la règle 3 ($@1)

    $@1  aller à l'état 14


État 10

    2 Clio4: tMAIN tPO tPF Body .

    $défaut  réduction par utilisation de la règle 2 (Clio4)


État 11

   11 Parametre: tINT tID .

    $défaut  réduction par utilisation de la règle 11 (Parametre)


État 12

    1 Clio4: tMAIN tPO Parametres tPF . Body

    tOB  décalage et aller à l'état 9

    Body  aller à l'état 15


État 13

   10 Parametres: Parametre tVIRG . Parametres

    tINT  décalage et aller à l'état 6

    Parametres  aller à l'état 16
    Parametre   aller à l'état 8


État 14

    4 Body: tOB $@1 . DeclaInstrs tCB

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tPRINT  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tIF       [réduction par utilisation de la règle 13 (Declarations)]
    tIF       [réduction par utilisation de la règle 19 (Instructions)]
    tWHILE    [réduction par utilisation de la règle 13 (Declarations)]
    tWHILE    [réduction par utilisation de la règle 19 (Instructions)]
    tINT      [réduction par utilisation de la règle 13 (Declarations)]
    tINT      [réduction par utilisation de la règle 19 (Instructions)]
    tPRINT    [réduction par utilisation de la règle 13 (Declarations)]
    tPRINT    [réduction par utilisation de la règle 19 (Instructions)]
    tCB       réduction par utilisation de la règle 6 (DeclaInstrs)
    tCB       [réduction par utilisation de la règle 13 (Declarations)]
    tCB       [réduction par utilisation de la règle 19 (Instructions)]
    tID       [réduction par utilisation de la règle 13 (Declarations)]
    tID       [réduction par utilisation de la règle 19 (Instructions)]
    $défaut  réduction par utilisation de la règle 6 (DeclaInstrs)

    DeclaInstrs   aller à l'état 22
    DeclaInstr    aller à l'état 23
    Declarations  aller à l'état 24
    Declaration   aller à l'état 25
    Instructions  aller à l'état 26
    Instruction   aller à l'état 27
    Affectation   aller à l'état 28


État 15

    1 Clio4: tMAIN tPO Parametres tPF Body .

    $défaut  réduction par utilisation de la règle 1 (Clio4)


État 16

   10 Parametres: Parametre tVIRG Parametres .

    $défaut  réduction par utilisation de la règle 10 (Parametres)


État 17

   24 Instruction: tIF . tPO Condition tPF tOB $@2 Body tCB $@3 Else tOB $@4 tCB

    tPO  décalage et aller à l'état 29


État 18

   27 Instruction: tWHILE . $@5 tPO Condition tPF tOB $@6 Body tCB

    $défaut  réduction par utilisation de la règle 25 ($@5)

    $@5  aller à l'état 30


État 19

   14 Declaration: tINT . IDs tEOI
   15            | tINT . tID tEGAL tNB tEOI

    tID  décalage et aller à l'état 31

    IDs  aller à l'état 32


État 20

   28 Instruction: tPRINT . tPO Element tPF tEOI

    tPO  décalage et aller à l'état 33


État 21

   37 Affectation: tID . tEGAL Operation tEOI

    tEGAL  décalage et aller à l'état 34


État 22

    4 Body: tOB $@1 DeclaInstrs . tCB

    tCB  décalage et aller à l'état 35


État 23

    5 DeclaInstrs: DeclaInstr . DeclaInstrs

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tINT    décalage et aller à l'état 19
    tPRINT  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tIF       [réduction par utilisation de la règle 13 (Declarations)]
    tIF       [réduction par utilisation de la règle 19 (Instructions)]
    tWHILE    [réduction par utilisation de la règle 13 (Declarations)]
    tWHILE    [réduction par utilisation de la règle 19 (Instructions)]
    tINT      [réduction par utilisation de la règle 13 (Declarations)]
    tINT      [réduction par utilisation de la règle 19 (Instructions)]
    tPRINT    [réduction par utilisation de la règle 13 (Declarations)]
    tPRINT    [réduction par utilisation de la règle 19 (Instructions)]
    tCB       réduction par utilisation de la règle 6 (DeclaInstrs)
    tCB       [réduction par utilisation de la règle 13 (Declarations)]
    tCB       [réduction par utilisation de la règle 19 (Instructions)]
    tID       [réduction par utilisation de la règle 13 (Declarations)]
    tID       [réduction par utilisation de la règle 19 (Instructions)]
    $défaut  réduction par utilisation de la règle 6 (DeclaInstrs)

    DeclaInstrs   aller à l'état 36
    DeclaInstr    aller à l'état 23
    Declarations  aller à l'état 24
    Declaration   aller à l'état 25
    Instructions  aller à l'état 26
    Instruction   aller à l'état 27
    Affectation   aller à l'état 28


État 24

    7 DeclaInstr: Declarations .

    $défaut  réduction par utilisation de la règle 7 (DeclaInstr)


État 25

   12 Declarations: Declaration . Declarations

    tINT  décalage et aller à l'état 19

    tINT      [réduction par utilisation de la règle 13 (Declarations)]
    $défaut  réduction par utilisation de la règle 13 (Declarations)

    Declarations  aller à l'état 37
    Declaration   aller à l'état 25


État 26

    8 DeclaInstr: Instructions .

    $défaut  réduction par utilisation de la règle 8 (DeclaInstr)


État 27

   18 Instructions: Instruction . Instructions

    tIF     décalage et aller à l'état 17
    tWHILE  décalage et aller à l'état 18
    tPRINT  décalage et aller à l'état 20
    tID     décalage et aller à l'état 21

    tIF       [réduction par utilisation de la règle 19 (Instructions)]
    tWHILE    [réduction par utilisation de la règle 19 (Instructions)]
    tPRINT    [réduction par utilisation de la règle 19 (Instructions)]
    tID       [réduction par utilisation de la règle 19 (Instructions)]
    $défaut  réduction par utilisation de la règle 19 (Instructions)

    Instructions  aller à l'état 38
    Instruction   aller à l'état 27
    Affectation   aller à l'état 28


État 28

   20 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 29

   24 Instruction: tIF tPO . Condition tPF tOB $@2 Body tCB $@3 Else tOB $@4 tCB

    tNB  décalage et aller à l'état 39
    tID  décalage et aller à l'état 40

    Element    aller à l'état 41
    Condition  aller à l'état 42


État 30

   27 Instruction: tWHILE $@5 . tPO Condition tPF tOB $@6 Body tCB

    tPO  décalage et aller à l'état 43


État 31

   15 Declaration: tINT tID . tEGAL tNB tEOI
   16 IDs: tID .
   17    | tID . tVIRG tID

    tEGAL  décalage et aller à l'état 44
    tVIRG  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 16 (IDs)


État 32

   14 Declaration: tINT IDs . tEOI

    tEOI  décalage et aller à l'état 46


État 33

   28 Instruction: tPRINT tPO . Element tPF tEOI

    tNB  décalage et aller à l'état 39
    tID  décalage et aller à l'état 40

    Element  aller à l'état 47


État 34

   37 Affectation: tID tEGAL . Operation tEOI

    tNB  décalage et aller à l'état 48
    tID  décalage et aller à l'état 49

    Operation  aller à l'état 50
    MultDivi   aller à l'état 51
    Terme      aller à l'état 52


État 35

    4 Body: tOB $@1 DeclaInstrs tCB .

    $défaut  réduction par utilisation de la règle 4 (Body)


État 36

    5 DeclaInstrs: DeclaInstr DeclaInstrs .

    $défaut  réduction par utilisation de la règle 5 (DeclaInstrs)


État 37

   12 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 12 (Declarations)


État 38

   18 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 18 (Instructions)


État 39

   31 Element: tNB .

    $défaut  réduction par utilisation de la règle 31 (Element)


État 40

   32 Element: tID .

    $défaut  réduction par utilisation de la règle 32 (Element)


État 41

   33 Condition: Element . tEGAL tEGAL Element
   34          | Element . tINF Element
   35          | Element . tSUP Element
   36          | Element .

    tEGAL  décalage et aller à l'état 53
    tSUP   décalage et aller à l'état 54
    tINF   décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 36 (Condition)


État 42

   24 Instruction: tIF tPO Condition . tPF tOB $@2 Body tCB $@3 Else tOB $@4 tCB

    tPF  décalage et aller à l'état 56


État 43

   27 Instruction: tWHILE $@5 tPO . Condition tPF tOB $@6 Body tCB

    tNB  décalage et aller à l'état 39
    tID  décalage et aller à l'état 40

    Element    aller à l'état 41
    Condition  aller à l'état 57


État 44

   15 Declaration: tINT tID tEGAL . tNB tEOI

    tNB  décalage et aller à l'état 58


État 45

   17 IDs: tID tVIRG . tID

    tID  décalage et aller à l'état 59


État 46

   14 Declaration: tINT IDs tEOI .

    $défaut  réduction par utilisation de la règle 14 (Declaration)


État 47

   28 Instruction: tPRINT tPO Element . tPF tEOI

    tPF  décalage et aller à l'état 60


État 48

   45 Terme: tNB .

    $défaut  réduction par utilisation de la règle 45 (Terme)


État 49

   44 Terme: tID .

    $défaut  réduction par utilisation de la règle 44 (Terme)


État 50

   37 Affectation: tID tEGAL Operation . tEOI
   38 Operation: Operation . tADD MultDivi
   39          | Operation . tSOU MultDivi

    tSOU  décalage et aller à l'état 61
    tADD  décalage et aller à l'état 62
    tEOI  décalage et aller à l'état 63


État 51

   40 Operation: MultDivi .
   41 MultDivi: MultDivi . tMUL Terme
   42         | MultDivi . tDIV Terme

    tDIV  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 40 (Operation)


État 52

   43 MultDivi: Terme .

    $défaut  réduction par utilisation de la règle 43 (MultDivi)


État 53

   33 Condition: Element tEGAL . tEGAL Element

    tEGAL  décalage et aller à l'état 66


État 54

   35 Condition: Element tSUP . Element

    tNB  décalage et aller à l'état 39
    tID  décalage et aller à l'état 40

    Element  aller à l'état 67


État 55

   34 Condition: Element tINF . Element

    tNB  décalage et aller à l'état 39
    tID  décalage et aller à l'état 40

    Element  aller à l'état 68


État 56

   24 Instruction: tIF tPO Condition tPF . tOB $@2 Body tCB $@3 Else tOB $@4 tCB

    tOB  décalage et aller à l'état 69


État 57

   27 Instruction: tWHILE $@5 tPO Condition . tPF tOB $@6 Body tCB

    tPF  décalage et aller à l'état 70


État 58

   15 Declaration: tINT tID tEGAL tNB . tEOI

    tEOI  décalage et aller à l'état 71


État 59

   17 IDs: tID tVIRG tID .

    $défaut  réduction par utilisation de la règle 17 (IDs)


État 60

   28 Instruction: tPRINT tPO Element tPF . tEOI

    tEOI  décalage et aller à l'état 72


État 61

   39 Operation: Operation tSOU . MultDivi

    tNB  décalage et aller à l'état 48
    tID  décalage et aller à l'état 49

    MultDivi  aller à l'état 73
    Terme     aller à l'état 52


État 62

   38 Operation: Operation tADD . MultDivi

    tNB  décalage et aller à l'état 48
    tID  décalage et aller à l'état 49

    MultDivi  aller à l'état 74
    Terme     aller à l'état 52


État 63

   37 Affectation: tID tEGAL Operation tEOI .

    $défaut  réduction par utilisation de la règle 37 (Affectation)


État 64

   42 MultDivi: MultDivi tDIV . Terme

    tNB  décalage et aller à l'état 48
    tID  décalage et aller à l'état 49

    Terme  aller à l'état 75


État 65

   41 MultDivi: MultDivi tMUL . Terme

    tNB  décalage et aller à l'état 48
    tID  décalage et aller à l'état 49

    Terme  aller à l'état 76


État 66

   33 Condition: Element tEGAL tEGAL . Element

    tNB  décalage et aller à l'état 39
    tID  décalage et aller à l'état 40

    Element  aller à l'état 77


État 67

   35 Condition: Element tSUP Element .

    $défaut  réduction par utilisation de la règle 35 (Condition)


État 68

   34 Condition: Element tINF Element .

    $défaut  réduction par utilisation de la règle 34 (Condition)


État 69

   24 Instruction: tIF tPO Condition tPF tOB . $@2 Body tCB $@3 Else tOB $@4 tCB

    $défaut  réduction par utilisation de la règle 21 ($@2)

    $@2  aller à l'état 78


État 70

   27 Instruction: tWHILE $@5 tPO Condition tPF . tOB $@6 Body tCB

    tOB  décalage et aller à l'état 79


État 71

   15 Declaration: tINT tID tEGAL tNB tEOI .

    $défaut  réduction par utilisation de la règle 15 (Declaration)


État 72

   28 Instruction: tPRINT tPO Element tPF tEOI .

    $défaut  réduction par utilisation de la règle 28 (Instruction)


État 73

   39 Operation: Operation tSOU MultDivi .
   41 MultDivi: MultDivi . tMUL Terme
   42         | MultDivi . tDIV Terme

    tDIV  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 39 (Operation)


État 74

   38 Operation: Operation tADD MultDivi .
   41 MultDivi: MultDivi . tMUL Terme
   42         | MultDivi . tDIV Terme

    tDIV  décalage et aller à l'état 64
    tMUL  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 38 (Operation)


État 75

   42 MultDivi: MultDivi tDIV Terme .

    $défaut  réduction par utilisation de la règle 42 (MultDivi)


État 76

   41 MultDivi: MultDivi tMUL Terme .

    $défaut  réduction par utilisation de la règle 41 (MultDivi)


État 77

   33 Condition: Element tEGAL tEGAL Element .

    $défaut  réduction par utilisation de la règle 33 (Condition)


État 78

   24 Instruction: tIF tPO Condition tPF tOB $@2 . Body tCB $@3 Else tOB $@4 tCB

    tOB  décalage et aller à l'état 9

    Body  aller à l'état 80


État 79

   27 Instruction: tWHILE $@5 tPO Condition tPF tOB . $@6 Body tCB

    $défaut  réduction par utilisation de la règle 26 ($@6)

    $@6  aller à l'état 81


État 80

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body . tCB $@3 Else tOB $@4 tCB

    tCB  décalage et aller à l'état 82


État 81

   27 Instruction: tWHILE $@5 tPO Condition tPF tOB $@6 . Body tCB

    tOB  décalage et aller à l'état 9

    Body  aller à l'état 83


État 82

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB . $@3 Else tOB $@4 tCB

    $défaut  réduction par utilisation de la règle 22 ($@3)

    $@3  aller à l'état 84


État 83

   27 Instruction: tWHILE $@5 tPO Condition tPF tOB $@6 Body . tCB

    tCB  décalage et aller à l'état 85


État 84

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB $@3 . Else tOB $@4 tCB

    tELSE  décalage et aller à l'état 86

    $défaut  réduction par utilisation de la règle 30 (Else)

    Else  aller à l'état 87


État 85

   27 Instruction: tWHILE $@5 tPO Condition tPF tOB $@6 Body tCB .

    $défaut  réduction par utilisation de la règle 27 (Instruction)


État 86

   29 Else: tELSE . Body

    tOB  décalage et aller à l'état 9

    Body  aller à l'état 88


État 87

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB $@3 Else . tOB $@4 tCB

    tOB  décalage et aller à l'état 89


État 88

   29 Else: tELSE Body .

    $défaut  réduction par utilisation de la règle 29 (Else)


État 89

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB $@3 Else tOB . $@4 tCB

    $défaut  réduction par utilisation de la règle 23 ($@4)

    $@4  aller à l'état 90


État 90

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB $@3 Else tOB $@4 . tCB

    tCB  décalage et aller à l'état 91


État 91

   24 Instruction: tIF tPO Condition tPF tOB $@2 Body tCB $@3 Else tOB $@4 tCB .

    $défaut  réduction par utilisation de la règle 24 (Instruction)
